--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ yandex_site_verification :
 
 # Social Sharing
 twitter:
-  username               : &twitter
+  username               : #&twitter
 facebook:
   username               :
   app_id                 :
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Carme Zambrana"
   avatar           : "profile.png"
-  bio              : "PhD Student at ICONBI (BSC)"
-  location         : "Location"
+  bio              : "PhD Student at ICONBI"
+  location         : "Barcelona Supercomputer Center (BSC)"
   employer         :
   pubmed           : "https://pubmed.ncbi.nlm.nih.gov/?term=Carme+Zambrana"
   googlescholar    : "https://scholar.google.com/citations?user=9d5iV8oAAAAJ&hl=ca"
