--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Carme Zambrana"
   avatar           : "profile.png"
   bio              : "PhD Student at ICONBI"
-  location         : "Barcelona Supercomputer Center (BSC)"
+  location         : "Barcelona Supercomputer Center"
   employer         :
   pubmed           : "https://pubmed.ncbi.nlm.nih.gov/?term=Carme+Zambrana"
   googlescholar    : "https://scholar.google.com/citations?user=9d5iV8oAAAAJ&hl=ca"
