--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Carme Zambrana"
-  avatar           : "profile.png"
+  avatar           : "CardSizePhoto_CarmeZambrana.png"
   bio              : "PhD Student at ICONBI"
   location         : "Barcelona Supercomputer Center"
   employer         :
