--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Carme Zambrana"
 title_separator          : "-"
 name                     : &name "Carme"
-description              : &description "PhD Student at ICONBI group of Life Science department (BSC)"
+description              : &description "Postdoctoral Researcher at ICONBI group of Life Science department (BSC)"
 url                      : https://carmezambrana.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "carmezambrana.github.io"
