--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Carme Zambrana"
   avatar           : "CardSizePhoto_CarmeZambrana.JPG"
-  bio              : "PhD Student at ICONBI"
+  bio              : "Postdoctoral Researcher at ICONBI"
   location         : "Barcelona Supercomputer Center"
   employer         :
   pubmed           : "https://pubmed.ncbi.nlm.nih.gov/?term=Carme+Zambrana"
